tests/error/non_defined_entry_point.c
// fail "Entry point has to be defined."

void main();
